test/negative/t15.mli.expected

*******************************
********** Parsed file ********
*******************************
type 'a t2 =
  | C2 of 'a 
  | C3 of bool 
  | C4 of int * 'a 
[@@@gospel {| function gnr: 'a |}]
[@@@gospel {| function g (x y:'a) (i: int): 'a |}]
[@@@gospel
  {| function f (x: 'a t2): 'a =
    match x with
    | C2 x -> true
    | C3 b -> gnr
    | C4 (i,x) -> g x x i |}]

*******************************
****** GOSPEL translation *****
*******************************
(*@ open Stdlib *)

(*@ open Gospelstdlib *)

type 'a t2 =
| C2 of 'a 
| C3 of bool 
| C4 of int * 'a 
  

(*@ function gnr ... *)

(*@ function g ... *)

(*@ function f ... *)
File "t15.mli", line 21, characters 18-19:
Error: This term has type `'a' but a term was expected of type `bool'.
